--- a/career.html
+++ b/career.html
@@ -197,7 +197,7 @@
                                 </div>
                                 <div class="r-part">
                                     <div class="btn-flex flex-wrap">
-                                        <a href="" class="main-btn red">
+                                        <a href="javascripr:void(0)" data-bs-toggle="modal" data-bs-target="#career-modal" class="main-btn red">
                                             <span>Apply Now</span>
                                         </a>
                                         <a href="" class="main-btn border">
@@ -429,6 +429,86 @@
                 <p>Copyright 2023 | Trefoil Pvt. Ltd | All Right Reserved | Code & Design Credits</p>
             </div>
         </footer>
+
+        <div class="modal fade cc-modal" id="career-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                
+                <div class="modal-body">
+                    <div class="career-form-container">
+                        <div class="c-f-header">
+                            <p>Applying For</p>
+                            <h3>Engineering Manager</h3>
+                            <button type="button" class="modal-close" data-bs-dismiss="modal" aria-label="Close">
+                                <img src="assets/images/close.svg" alt="">
+                            </button>
+                        </div>
+                        <form action="" class="career-form">
+                            <div class="row">
+                                <div class="col-lg-6 col-12">
+                                    <div class="form-group">
+                                        <label for="">Full Name</label>
+                                        <div class="inp-grp">
+                                            <input type="text">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-12">
+                                    <div class="form-group">
+                                        <label for="">Email Address</label>
+                                        <div class="inp-grp">
+                                            <input type="text">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-12">
+                                    <div class="form-group">
+                                        <label for="">Phone Number</label>
+                                        <div class="inp-grp">
+                                            <input type="text">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-12">
+                                    <div class="form-group">
+                                        <label for="">Resume</label>
+                                        <div class="inp-grp">
+                                            <div class="resume-selector">
+                                                <input type="file" id="resume"  />
+                                                <label for="resume">
+                                                    <span>Select your resume</span>
+                                                    <button class="remove-resume">
+                                                        <img src="assets/images/crose.svg" alt="">
+                                                    </button>
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-12 col-12">
+                                    <div class="form-group">
+                                        <label for="">Message</label>
+                                        <div class="inp-grp">
+                                            <textarea name="" id="" rows="5"></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <button class="main-btn red center">
+                                        <span>Apply Now</span>
+                                    </button>
+                                    <p class="sm-text text-center mt-20">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
+                                    </p>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                
+                </div>
+            </div>
+        </div>
 
     </main>
 
