--- a/resource-inner.html
+++ b/resource-inner.html
@@ -144,226 +144,34 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="sec-head center white">
-                            <h2>Resources</h2>
+                            <h2>Blog Heading goes here</h2>
                         </div>
                     </div>
                 </div>
             </div>
         </header>
 
-        <section class="sec l-bg">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-7 col-12">
-                        <div class="sec-head">
-                            <h2><span>Exploring Big Ideas</span> Behind Foil/Packaging Manufacturing</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="row" style="row-gap: 20px;">
-                    <div class="col-lg-3 col-12">
-                        <a href="" class="cs-card">
-                            <div class="cs-img">
-                                <img src="assets/images/resource.jpg" alt="">
-                            </div>
-                            <div class="cs-con">
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </p>
-                                <div class="read-more-btn">
-                                    <span>Read more</span>
-                                    <img src="assets/images/red-circ-arrow.svg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-12">
-                        <a href="" class="cs-card">
-                            <div class="cs-img">
-                                <img src="assets/images/resource.jpg" alt="">
-                            </div>
-                            <div class="cs-con">
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </p>
-                                <div class="read-more-btn">
-                                    <span>Read more</span>
-                                    <img src="assets/images/red-circ-arrow.svg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-12">
-                        <a href="" class="cs-card">
-                            <div class="cs-img">
-                                <img src="assets/images/resource.jpg" alt="">
-                            </div>
-                            <div class="cs-con">
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </p>
-                                <div class="read-more-btn">
-                                    <span>Read more</span>
-                                    <img src="assets/images/red-circ-arrow.svg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-12">
-                        <a href="" class="cs-card">
-                            <div class="cs-img">
-                                <img src="assets/images/resource.jpg" alt="">
-                            </div>
-                            <div class="cs-con">
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </p>
-                                <div class="read-more-btn">
-                                    <span>Read more</span>
-                                    <img src="assets/images/red-circ-arrow.svg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="sec">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="sec-head">
-                            <h2>Trefoil in <span>the Spotlight</span></h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="row" style="row-gap:20px;">
-                    <div class="col-lg-3 col-12">
-                        <a href="" class="cs-card style-2">
-                            <div class="cs-con">
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </p>
-                                <div class="read-more-btn">
-                                    <span>Read more</span>
-                                    <img src="assets/images/red-circ-arrow.svg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-12">
-                        <a href="" class="cs-card style-2">
-                            <div class="cs-con">
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </p>
-                                <div class="read-more-btn">
-                                    <span>Read more</span>
-                                    <img src="assets/images/red-circ-arrow.svg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-12">
-                        <a href="" class="cs-card style-2">
-                            <div class="cs-con">
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </p>
-                                <div class="read-more-btn">
-                                    <span>Read more</span>
-                                    <img src="assets/images/red-circ-arrow.svg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-12">
-                        <a href="" class="cs-card style-2">
-                            <div class="cs-con">
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </p>
-                                <div class="read-more-btn">
-                                    <span>Read more</span>
-                                    <img src="assets/images/red-circ-arrow.svg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-12">
-                        <a href="" class="cs-card style-2">
-                            <div class="cs-con">
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </p>
-                                <div class="read-more-btn">
-                                    <span>Read more</span>
-                                    <img src="assets/images/red-circ-arrow.svg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-12">
-                        <a href="" class="cs-card style-2">
-                            <div class="cs-con">
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </p>
-                                <div class="read-more-btn">
-                                    <span>Read more</span>
-                                    <img src="assets/images/red-circ-arrow.svg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-12">
-                        <a href="" class="cs-card style-2">
-                            <div class="cs-con">
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </p>
-                                <div class="read-more-btn">
-                                    <span>Read more</span>
-                                    <img src="assets/images/red-circ-arrow.svg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-12">
-                        <a href="" class="cs-card style-2">
-                            <div class="cs-con">
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </p>
-                                <div class="read-more-btn">
-                                    <span>Read more</span>
-                                    <img src="assets/images/red-circ-arrow.svg" alt="">
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="sec join-sec">
+        <section class="blog-page-inner sec">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8 col-12">
-                        <div class="sec-head center">
-                            <h2>Join Our <span>Mailing List</span></h2>
+                    <div class="col-lg-9 col-12">
+                        <div class="blog-con-area">
                             <p class="para">
-                                Sign up for our newsletter and never miss an update on our cutting-edge products, industry insights, and company news.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil aliquam deleniti soluta quasi vitae consectetur iste distinctio ut, at sint fuga, hic qui quibusdam eos sed dolores alias corporis enim.
+                                <br><br>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil aliquam deleniti soluta quasi vitae consectetur iste distinctio ut, at sint fuga, hic qui quibusdam eos sed dolores alias corporis enim.
+                                <br><br>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil aliquam deleniti soluta quasi vitae consectetur iste distinctio ut, at sint fuga, hic qui quibusdam eos sed dolores alias corporis enim.
+                                <br><br>
                             </p>
-                        </div>
-                        <div class="sub-wrap">
-                            <div class="input">
-                                <input type="text" placeholder="Enter Your Email Address" />
+                            <div class="row">
+                                <div class="col-lg-6 col-12">
+                                    <img src="assets/images/m1.jpg" class="img-full" alt="">
+                                </div>
+                                <div class="col-lg-6 col-12">
+                                    <img src="assets/images/m2.jpg" class="img-full" alt="">
+                                </div>
                             </div>
-                            <button class="main-btn red">
-                                <span>SUBSCRIBE</span>
-                            </button>
                         </div>
                     </div>
                 </div>
